# catalina

./: CRATE.md  Cargo.toml  LICENSE.MIT  README.md  catalina.code-workspace  rythm.code-workspace
crates/bsp/: Cargo.toml
crates/bsp/src/: lib.rs
crates/catalina-bsp/: Cargo.toml
crates/catalina-cli/: Cargo.toml
crates/catalina-engine/: Cargo.toml  README.md
crates/catalina-engine/examples/std/play-sine/src/: main.rs
crates/catalina-engine/examples/std/render-sine/src/: main.rs
crates/catalina-engine/examples/std/sine-synth/src/: instrument.rs
crates/catalina-engine/src/audio/: mod.rs  peak.rs  rms.rs
crates/catalina-engine/src/audio/envelope/: mod.rs
crates/catalina-engine/src/audio/envelope/detect/: mod.rs  ops.rs  peak.rs  rms.rs
crates/catalina-engine/src/audio/frame/: mod.rs
crates/catalina-engine/src/audio/interpolate/: floor.rs  linear.rs  mod.rs
crates/catalina-engine/src/audio/interpolate/sinc/: mod.rs  ops.rs
crates/catalina-engine/src/audio/oscillator/: mod.rs  variable.rs
crates/catalina-engine/src/audio/sample/: conv.rs  mod.rs  types.rs
crates/catalina-engine/src/audio/signal/: boxed.rs  bus.rs  envelope.rs  interpolate.rs  mod.rs  ops.rs  rms.rs
crates/catalina-engine/src/audio/signal/window/: hann.rs  mod.rs  rectangle.rs
crates/catalina-engine/src/audio/slice/: boxed.rs  mod.rs
crates/catalina-engine/src/audio/slice/frame/: fixed_size_array.rs  mod.rs
crates/catalina-engine/src/audio/window/: mod.rs  rectangle.rs
crates/catalina-engine/src/audio/window/hann/: mod.rs  ops.rs
crates/catalina-engine/src/core/: mod.rs  ring_buffer.rs
crates/catalina-engine/src/music/: helpers.rs  note.rs  pitch.rs
crates/catalina-instruments/: Cargo.toml
crates/catalina-machines/: Cargo.toml
crates/catalina-machines/src/: lib.rs  machine.rs  parameter.rs
crates/catalina-machines/src/machines/: midi.rs  mod.rs
crates/catalina-seq/: Cargo.toml
crates/catalina-seq/src/: event.rs  lib.rs  parameter.rs  pattern.rs  project.rs  timing.rs  track.rs  trigger.rs
crates/instruments/: Cargo.toml
crates/instruments/src/: lib.rs
crates/instruments/src/synths/: additive.rs
engine/: Cargo.toml  README.md
engine/examples/render-wave-sine/: Cargo.toml  sine.wav.asd
engine/examples/render-wave-sine/src/: main.rs
engine/examples/sine-synth/: Cargo.toml
engine/examples/sine-synth/src/: instrument.rs  main.rs
engine/examples/std/play-wave-sine/src/: main.rs
engine/examples/std/render-wave-sine/: sine.wav.asd
engine/examples/std/render-wave-sine/src/: main.rs
engine/examples/std/sine-synth/: Cargo.toml
engine/examples/std/sine-synth/src/: instrument.rs  main.rs
engine/examples/terminal-sequencer/: Cargo.toml
engine/src/: lib.rs  prelude.rs
engine/src/audio/: mod.rs
engine/src/audio/oscillator/: mod.rs  sine.rs
engine/src/core/: mod.rs
engine/src/instrument/: mod.rs
engine/src/music/: note.rs
engine/src/theory/: mod.rs  named_pitch.rs  note.rs  octave.rs  pitch.rs
examples/std/play-sine/src/: main.rs
examples/std/render-sine/src/: main.rs
examples/std/sine-synth/src/: instrument.rs  main.rs
hardware/boards/card/v0.1/: card_v0.1.kicad_pcb  card_v0.1.kicad_pro  card_v0.1.kicad_sch  codec.kicad_sch  codec_output_stage.kicad_sch
hardware/boards/mini-breakout/v0.1/mini-breakout_v0.1/: fp-lib-table  mini-breakout_v0.1.kicad_dru  mini-breakout_v0.1.kicad_pcb  mini-breakout_v0.1.kicad_pro  mini-breakout_v0.1.kicad_sch
hardware/boards/mini/v0.2/: mini_v0.2.kicad_pcb  mini_v0.2.kicad_pro  mini_v0.2.kicad_sch  rythm_mini_v0.2.kicad_pcb  rythm_mini_v0.2.kicad_pro  rythm_mini_v0.2.kicad_sch
hardware/boards/mini/v0.3/: fp-lib-table  mini_v0.3.kicad_dru  mini_v0.3.kicad_pcb  mini_v0.3.kicad_pro  mini_v0.3.kicad_sch
hardware/footprints/Catalina.pretty/: 9774040243.kicad_mod  Mini-v0.3.kicad_mod
hardware/footprints/Rythm.pretty/: Untitled.kicad_mod
hardware/symbols/: Rythm.kicad_sym
src/: lib.rs
