[workspace]
members = ["crates/*", "examples/std/*", "examples/embedded/*"]

[workspace.package]
keywords = ["audio", "music", "dsp"]
repository = "https://github.com/northernpaws/catalina"
license = "MIT"

[package]
name = "catalina"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Rust framework for DSP audio processing and music with a strong focus on ARM Cortex processors."
repository = "https://github.com/northernpaws/catalina"
readme = "CRATE.md"
keywords = ["audio", "music", "dsp"]
categories = [
    "command-line-utilities",
    "multimedia::audio",
    "no-std",
    "no-std::no-alloc",
    "embedded",
]

[lib]
name = "catalina"
path = "src/lib.rs"

[dependencies]
# The core audio and synth engine.
catalina-engine = { path = "crates/catalina-engine", version = "0.1.0", optional = true }

# Basic insturments implementations for examples.
catalina-instruments = { path = "crates/catalina-instruments", version = "0.1.0", optional = true }

# Board support packages for modules, carriers and kits from the ecosystem.
catalina-bsp = { path = "crates/catalina-bsp", version = "0.1.0", optional = true }

[features]
engine = ["dep:catalina-engine"]
instruments = ["dep:catalina-instruments"]
bsp = ["dep:catalina-bsp"]

# Generic common feature flags.
default = ["engine"]
std = ["catalina-engine/std", "catalina-instruments/std"]
alloc = ["catalina-engine/alloc", "catalina-instruments/alloc"]
defmt = ["catalina-engine/defmt"]
log = ["catalina-engine/log"]
serde = ["catalina-engine/serde"]

# Features derrived from the BSP support modules.
bsp-mini = ["bsp", "catalina-bsp/mini"]
bsp-mini-v0_2 = ["bsp", "catalina-bsp/mini-v0_2"]
