[package]
name = "rythm-engine"
version = "0.0.1"
edition = "2024"


[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.2"
pretty_assertions = "1.4.1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["serde"]

std = ["alloc"]
alloc = []

serde = ["dep:serde"]
defmt = ["dep:defmt"]
log = []
